update docs for pdk creation

--- a/docs/notebooks/08_pdk.ipynb
+++ b/docs/notebooks/08_pdk.ipynb
@@ -48,8 +48,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.executable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import gdsfactory as gf\n",
-    "from gdsfactory.layers import lyp_to_dataclass\n",
+    "from gdsfactory.technology import lyp_to_dataclass\n",
     "from gdsfactory.config import PATH\n",
     "\n",
     "print(lyp_to_dataclass(PATH.klayout_lyp))"
@@ -189,8 +199,8 @@
     "pin = gf.partial(\n",
     "    gf.cross_section.strip,\n",
     "    sections=(\n",
-    "        gf.tech.Section(width=2, layer=gf.LAYER.N, offset=+1),\n",
-    "        gf.tech.Section(width=2, layer=gf.LAYER.P, offset=-1),\n",
+    "        gf.Section(width=2, layer=gf.LAYER.N, offset=+1),\n",
+    "        gf.Section(width=2, layer=gf.LAYER.P, offset=-1),\n",
     "    ),\n",
     ")\n",
     "c = gf.components.straight(cross_section=pin)\n",
@@ -280,9 +290,9 @@
     "    layers=LAYER.dict(),\n",
     "    cross_sections=cross_sections,\n",
     "    cells=cells,\n",
-    "    base_pdk=gf.pdk.GENERIC,\n",
+    "    base_pdk=gf.generic_tech.get_generic_pdk(),\n",
     "    sparameters_path=gf.config.sparameters_path,\n",
-    "    layer_colors=gf.layers.LAYER_COLORS,\n",
+    "    layer_views=gf.generic_tech.LAYER_VIEWS,\n",
     ")\n",
     "pdk1.activate()"
    ]
@@ -392,7 +402,7 @@
    "outputs": [],
    "source": [
     "import gdsfactory as gf\n",
-    "from gdsfactory.types import LayerStack, LayerLevel, LayerColors, LayerColor\n",
+    "from gdsfactory.technology import LayerStack, LayerLevel, LayerViews, LayerView\n",
     "from pydantic import BaseModel\n",
     "\n",
     "nm = 1e-3\n",
@@ -411,12 +421,12 @@
     "\n",
     "LAYER = LayerMap()\n",
     "\n",
-    "layer_colors = dict(\n",
-    "    WG=LayerColor(gds_layer=34, gds_datatype=0, color=\"gold\"),\n",
-    "    SLAB150=LayerColor(gds_layer=2, gds_datatype=0, color=\"red\"),\n",
-    "    TE=LayerColor(gds_layer=203, gds_datatype=0, color=\"green\"),\n",
-    ")\n",
-    "LAYER_COLORS = LayerColors(layers=layer_colors)\n",
+    "class FabALayerViews(LayerViews):\n",
+    "    WG = LayerView(color=\"gold\")\n",
+    "    SLAB150 = LayerView(color=\"red\")\n",
+    "    TE = LayerView(color=\"green\")\n",
+    "\n",
+    "LAYER_VIEWS = FabALayerViews(layer_map=LAYER.dict())\n",
     "\n",
     "\n",
     "def get_layer_stack_faba(\n",
@@ -424,23 +434,20 @@
     ") -> LayerStack:\n",
     "    \"\"\"Returns fabA LayerStack\"\"\"\n",
     "    ## TODO: Translate xml in lumerical process file\n",
-    "    return LayerStack(\n",
-    "        layers=dict(\n",
-    "            strip=LayerLevel(\n",
-    "                layer=LAYER.WG,\n",
-    "                thickness=thickness_wg,\n",
-    "                zmin=0.0,\n",
-    "                material=\"si\",\n",
-    "            ),\n",
-    "            strip2=LayerLevel(\n",
-    "                layer=LAYER.SLAB150,\n",
-    "                thickness=thickness_slab,\n",
-    "                zmin=0.0,\n",
-    "                material=\"si\",\n",
-    "            ),\n",
+    "    class FabALayerStack(LayerStack):\n",
+    "        strip=LayerLevel(\n",
+    "            layer=LAYER.WG,\n",
+    "            thickness=thickness_wg,\n",
+    "            zmin=0.0,\n",
+    "            material=\"si\",\n",
     "        )\n",
-    "    )\n",
-    "\n",
+    "        strip2=LayerLevel(\n",
+    "            layer=LAYER.SLAB150,\n",
+    "            thickness=thickness_slab,\n",
+    "            zmin=0.0,\n",
+    "            material=\"si\",\n",
+    "        )\n",
+    "    return FabALayerStack()\n",
     "\n",
     "LAYER_STACK = get_layer_stack_faba()\n",
     "\n",
@@ -457,7 +464,7 @@
     "    cross_section=strip,\n",
     ")\n",
     "\n",
-    "generic_pdk = gf.pdk.GENERIC\n",
+    "generic_pdk = gf.generic_tech.get_generic_pdk()\n",
     "\n",
     "fab_a = gf.Pdk(\n",
     "    name=\"Fab_A\",\n",
@@ -466,7 +473,7 @@
     "    layers=LAYER.dict(),\n",
     "    base_pdk=generic_pdk,\n",
     "    sparameters_path=gf.config.sparameters_path,\n",
-    "    layer_colors=LAYER_COLORS,\n",
+    "    layer_views=LAYER_VIEWS,\n",
     "    layer_stack=LAYER_STACK,\n",
     ")\n",
     "fab_a.activate()\n",
@@ -508,7 +515,8 @@
    "outputs": [],
    "source": [
     "import gdsfactory as gf\n",
-    "from gdsfactory.types import Layer, LayerColor, LayerColors, LayerStack, LayerLevel\n",
+    "from gdsfactory.types import Layer\n",
+    "from gdsfactory.technology import LayerStack, LayerLevel, LayerViews, LayerView\n",
     "from pydantic import BaseModel\n",
     "\n",
     "nm = 1e-3\n",
@@ -530,15 +538,19 @@
     "\n",
     "LAYER = LayerMap()\n",
     "\n",
-    "layer_colors = dict(\n",
-    "    WG=LayerColor(gds_layer=2, gds_datatype=0, color=\"red\"),\n",
-    "    SLAB150=LayerColor(gds_layer=3, gds_datatype=0, color=\"blue\"),\n",
-    "    TE=LayerColor(gds_layer=203, gds_datatype=0, color=\"green\"),\n",
-    "    PORT=LayerColor(gds_layer=1, gds_datatype=10, color=\"green\", alpha=0),\n",
-    "    DOPING_BLOCK1=LayerColor(gds_layer=61, gds_datatype=0, color=\"green\", alpha=0),\n",
-    "    DOPING_BLOCK2=LayerColor(gds_layer=62, gds_datatype=0, color=\"green\", alpha=0),\n",
-    ")\n",
-    "LAYER_COLORS = LayerColors(layers=layer_colors)\n",
+    "# The LayerViews class supports grouping LayerViews within each other. These groups are maintained when exporting a LayerViews object to a KLayout layer properties (.lyp) file.\n",
+    "class FabBLayerViews(LayerViews):\n",
+    "    WG = LayerView(color=\"red\")\n",
+    "    SLAB150 = LayerView(color=\"blue\")\n",
+    "    TE = LayerView(color=\"green\")\n",
+    "    PORT = LayerView(color=\"green\", alpha=0)\n",
+    "\n",
+    "    class DopingBlockGroup(LayerView):\n",
+    "        DOPING_BLOCK1 = LayerView(color=\"green\", alpha=0)\n",
+    "        DOPING_BLOCK2 = LayerView(color=\"green\", alpha=0)\n",
+    "    DopingBlocks = DopingBlockGroup()\n",
+    "\n",
+    "LAYER_VIEWS = FabBLayerViews(layer_map=LAYER)\n",
     "\n",
     "\n",
     "def get_layer_stack_fab_b(\n",
@@ -546,23 +558,20 @@
     ") -> LayerStack:\n",
     "    \"\"\"Returns fabA LayerStack\"\"\"\n",
     "    ## TODO: Translate xml in lumerical process file\n",
-    "    return LayerStack(\n",
-    "        layers=dict(\n",
-    "            strip=LayerLevel(\n",
-    "                layer=LAYER.WG,\n",
-    "                thickness=thickness_wg,\n",
-    "                zmin=0.0,\n",
-    "                material=\"si\",\n",
-    "            ),\n",
-    "            strip2=LayerLevel(\n",
-    "                layer=LAYER.SLAB150,\n",
-    "                thickness=thickness_slab,\n",
-    "                zmin=0.0,\n",
-    "                material=\"si\",\n",
-    "            ),\n",
+    "    class FabBLayerStack(LayerStack):\n",
+    "        strip = LayerLevel(\n",
+    "            layer=LAYER.WG,\n",
+    "            thickness=thickness_wg,\n",
+    "            zmin=0.0,\n",
+    "            material=\"si\",\n",
     "        )\n",
-    "    )\n",
-    "\n",
+    "        strip2 = LayerLevel(\n",
+    "            layer=LAYER.SLAB150,\n",
+    "            thickness=thickness_slab,\n",
+    "            zmin=0.0,\n",
+    "            material=\"si\",\n",
+    "        )\n",
+    "    return FabBLayerStack()\n",
     "\n",
     "LAYER_STACK = get_layer_stack_fab_b()\n",
     "\n",
@@ -613,7 +622,7 @@
     "    cross_sections=cross_sections,\n",
     "    layers=LAYER.dict(),\n",
     "    sparameters_path=gf.config.sparameters_path,\n",
-    "    layer_colors=LAYER_COLORS,\n",
+    "    layer_views=LAYER_VIEWS,\n",
     "    layer_stack=LAYER_STACK,\n",
     ")\n",
     "pdk.activate()\n",
@@ -653,15 +662,15 @@
    },
    "outputs": [],
    "source": [
-    "from typing import Callable, Dict, Optional, Tuple\n",
+    "from typing import Callable\n",
     "from pydantic import BaseModel\n",
     "\n",
     "import gdsfactory as gf\n",
     "from gdsfactory.add_pins import add_pin_rectangle_inside\n",
     "from gdsfactory.component import Component\n",
     "from gdsfactory.cross_section import cross_section\n",
-    "from gdsfactory.tech import LayerLevel, LayerStack\n",
-    "from gdsfactory.types import Layer, LayerColor, LayerColors\n",
+    "from gdsfactory.technology import LayerLevel, LayerStack, LayerViews, LayerView\n",
+    "from gdsfactory.types import Layer\n",
     "\n",
     "\n",
     "nm = 1e-3\n",
@@ -688,38 +697,41 @@
     "PORT_TYPE_TO_LAYER = dict(optical=(100, 0))\n",
     "\n",
     "# This is something you usually define in KLayout\n",
-    "layer_colors = dict(\n",
-    "    WG=LayerColor(gds_layer=10, gds_datatype=1, color=\"black\"),\n",
-    "    SLAB150=LayerColor(gds_layer=2, gds_datatype=0, color=\"blue\"),\n",
-    "    WGN=LayerColor(gds_layer=34, gds_datatype=0, color=\"orange\"),\n",
-    "    WGN_CLAD=LayerColor(gds_layer=36, gds_datatype=0, color=\"blue\", alpha=0),\n",
-    "    TE=LayerColor(gds_layer=203, gds_datatype=0, color=\"green\"),\n",
-    "    PORT=LayerColor(gds_layer=1, gds_datatype=10, color=\"green\", alpha=0),\n",
-    "    DOPING_BLOCK1=LayerColor(gds_layer=61, gds_datatype=0, color=\"green\", alpha=0),\n",
-    "    DOPING_BLOCK2=LayerColor(gds_layer=62, gds_datatype=0, color=\"green\", alpha=0),\n",
-    ")\n",
-    "LAYER_COLORS = LayerColors(layers=layer_colors)\n",
+    "class FabCLayerViews(LayerViews):\n",
+    "    WG = LayerView(color=\"black\")\n",
+    "    SLAB150 = LayerView(color=\"blue\")\n",
+    "    WGN = LayerView(color=\"orange\")\n",
+    "    WGN_CLAD = LayerView(color=\"blue\", alpha=0)\n",
+    "\n",
+    "    class SimulationGroup(LayerView):\n",
+    "        TE = LayerView(color=\"green\")\n",
+    "        PORT = LayerView(color=\"green\", alpha=0)\n",
+    "    Simulation = SimulationGroup()\n",
+    "\n",
+    "    class DopingGroup(LayerView):\n",
+    "        DOPING_BLOCK1 = LayerView(color=\"green\", alpha=0)\n",
+    "        DOPING_BLOCK2 = LayerView(color=\"green\", alpha=0)\n",
+    "    Doping = DopingGroup()\n",
+    "\n",
+    "LAYER_COLORS = FabCLayerViews(layer_map=LAYER)\n",
     "\n",
     "\n",
     "def get_layer_stack_fab_c(\n",
     "    thickness_wg: float = 350.0 * nm, thickness_clad: float = 3.0\n",
     ") -> LayerStack:\n",
     "    \"\"\"Returns generic LayerStack\"\"\"\n",
-    "    return LayerStack(\n",
-    "        layers=dict(\n",
-    "            core=LayerLevel(\n",
-    "                layer=LAYER.WGN,\n",
-    "                thickness=thickness_wg,\n",
-    "                zmin=0,\n",
-    "            ),\n",
-    "            clad=LayerLevel(\n",
-    "                layer=LAYER.WGN_CLAD,\n",
-    "                thickness=0,\n",
-    "                zmin=0,\n",
-    "            ),\n",
+    "    class FabCLayerStack(LayerStack):\n",
+    "        core=LayerLevel(\n",
+    "            layer=LAYER.WGN,\n",
+    "            thickness=thickness_wg,\n",
+    "            zmin=0,\n",
     "        )\n",
-    "    )\n",
-    "\n",
+    "        clad=LayerLevel(\n",
+    "            layer=LAYER.WGN_CLAD,\n",
+    "            thickness=thickness_clad,\n",
+    "            zmin=0,\n",
+    "        )\n",
+    "    return FabCLayerStack()\n",
     "\n",
     "LAYER_STACK = get_layer_stack_fab_c()\n",
     "\n",
@@ -851,7 +863,7 @@
     "    cross_sections=cross_sections,\n",
     "    layers=LAYER.dict(),\n",
     "    sparameters_path=gf.config.sparameters_path,\n",
-    "    layer_colors=LAYER_COLORS,\n",
+    "    layer_views=LAYER_VIEWS,\n",
     "    layer_stack=LAYER_STACK,\n",
     ")\n",
     "pdk.activate()"
@@ -982,9 +994,10 @@
    "outputs": [],
    "source": [
     "import gdsfactory as gf\n",
-    "from gdsfactory.pdk import GENERIC\n",
+    "from gdsfactory.generic_tech import get_generic_pdk\n",
     "from gdsfactory.decorators import flatten_invalid_refs, has_valid_transformations\n",
     "\n",
+    "GENERIC = get_generic_pdk()\n",
     "GENERIC.activate()\n",
     "\n",
     "\n",
